--- a/infrastructure/server-setup/playbook.yml
+++ b/infrastructure/server-setup/playbook.yml
@@ -40,7 +40,8 @@
       tags:
         - users
 
-- import_playbook: jump.yml
+# TODO: Uncomment if utilising a jump server
+# - import_playbook: jump.yml
 
 - hosts: docker-manager-first:docker-workers
   become: yes
