--- a/infrastructure/server-setup/inventory/staging.yml
+++ b/infrastructure/server-setup/inventory/staging.yml
@@ -70,7 +70,7 @@ docker-manager-first:
 docker-workers: {}
 backups:
   hosts:
-    farajaland-qa:
+    farajaland-backup:
       ansible_host: '64.226.95.104'
       # Written by provision pipeline. Assumes "backup" environment
       # exists in Github environments
