--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "@graphql-codegen/add": "^3.1.1",
     "@graphql-codegen/cli": "^3.3.1",
     "@graphql-codegen/introspection": "^3.0.1",
-    "@graphql-codegen/typescript-operations": "^3.0.4",
     "@graphql-codegen/typescript": "^3.0.4",
+    "@graphql-codegen/typescript-operations": "^3.0.4",
     "@inquirer/editor": "^1.2.13",
     "@octokit/core": "4.2.4",
     "@playwright/test": "^1.43.1",
@@ -58,10 +58,10 @@
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "cypress-xpath": "^2.0.1",
+    "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint": "^8.43.0",
     "husky": "1.0.0-rc.13",
     "inquirer": "^9.2.12",
     "jest": "^26.6.0",
@@ -80,6 +80,7 @@
   "dependencies": {
     "@faker-js/faker": "^6.0.0-alpha.5",
     "@hapi/boom": "^9.1.1",
+    "@hapi/h2o2": "^10.0.4",
     "@hapi/hapi": "^20.0.1",
     "@hapi/inert": "^6.0.3",
     "@types/chalk": "^2.2.0",
@@ -92,8 +93,8 @@
     "@types/jest": "^24.0.13",
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.117",
-    "@types/node-fetch": "^2.6.2",
     "@types/node": "^10.12.5",
+    "@types/node-fetch": "^2.6.2",
     "@types/nodemailer": "^6.4.14",
     "app-module-path": "^2.2.0",
     "chalk": "^2.4.1",
@@ -106,8 +107,8 @@
     "dotenv": "^16.4.5",
     "esbuild": "^0.18.9",
     "google-libphonenumber": "^3.2.32",
-    "graphql-tag": "^2.12.6",
     "graphql": "^16.3.0",
+    "graphql-tag": "^2.12.6",
     "handlebars": "^4.7.7",
     "hapi-auth-jwt2": "10.4.0",
     "hapi-pino": "^9.0.0",
