--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/minimist": "^1.2.5",
     "@types/prompts": "^2.4.9",
     "@types/react-intl": "^3.0.0",
+    "@types/hapi__h2o2": "8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "cypress-xpath": "^2.0.1",
@@ -80,7 +81,7 @@
   "dependencies": {
     "@faker-js/faker": "^6.0.0-alpha.5",
     "@hapi/boom": "^9.1.1",
-    "@hapi/h2o2": "^10.0.4",
+    "@hapi/h2o2": "^9.1.0",
     "@hapi/hapi": "^20.0.1",
     "@hapi/inert": "^6.0.3",
     "@types/chalk": "^2.2.0",
