--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "scripts": {
     "dev": "yarn start",
     "e2e": "yarn playwright test --ui",
-    "e2e:cypress": "CYPRESS_COUNTRYCONFIG_URL=https://countryconfig.farajaland-dev.opencrvs.org/ CYPRESS_GATEWAY_URL=https://gateway.farajaland-dev.opencrvs.org/ CYPRESS_LOGIN_URL=https://login.farajaland-dev.opencrvs.org/ CYPRESS_CLIENT_URL=https://register.farajaland-dev.opencrvs.org/ CYPRESS_AUTH_URL=https://auth.farajaland-dev.opencrvs.org/ cypress open",
     "e2e:generate-types": "graphql-codegen --config e2e/codegen.yml && yarn prettier --write e2e/gateway.ts",
     "test:watch": "jest --watch",
     "open:cov": "yarn test && opener coverage/index.html",
@@ -58,10 +57,8 @@
     "@types/hapi__h2o2": "8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
-    "cypress-xpath": "^2.0.1",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "1.0.0-rc.13",
     "inquirer": "^9.2.12",
@@ -103,7 +100,6 @@
     "cross-env": "^6.0.3",
     "csv-stringify": "^6.4.6",
     "csv2json": "^1.4.2",
-    "cypress": "13.5.0",
     "date-fns": "^2.28.0",
     "dotenv": "^16.4.5",
     "esbuild": "^0.18.9",
@@ -135,7 +131,7 @@
     "zod": "^3.17.3"
   },
   "lint-staged": {
-    "{src,e2e,cypress}/**/*.{ts,graphql}": [
+    "{src,e2e}/**/*.{ts,graphql}": [
       "eslint --fix",
       "prettier --write",
       "git add"
@@ -176,8 +172,7 @@
     "testEnvironment": "node",
     "testPathIgnorePatterns": [
       "/node_modules/",
-      "e2e",
-      "cypress"
+      "e2e"
     ]
   },
   "resolutions": {
