--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "noImplicitAny": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
-    "types": ["fhir", "geojson"]
+    "types": ["jest", "fhir", "geojson"]
   },
   "include": ["src/**/*.ts", "infrastructure/environments/**/*.ts", "typings"],
   "exclude": [
