--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "e2e": "yarn playwright test --ui",
     "e2e:generate-types": "graphql-codegen --config e2e/codegen.yml && yarn prettier --write e2e/gateway.ts",
     "precommit": "lint-staged",
-    "test": "vitest",
+    "test": "vitest 'src/**/*.test.ts' --passWithNoTests",
     "test:compilation": "tsc --noEmit",
     "lint": "eslint -c .eslintrc.js",
     "start": "cross-env NODE_ENV=development NODE_OPTIONS=--dns-result-order=ipv4first nodemon --exec ts-node -r tsconfig-paths/register src/index.ts",
