--- a/.github/workflows/deploy-and-e2e.yml
+++ b/.github/workflows/deploy-and-e2e.yml
@@ -134,10 +134,9 @@ jobs:
         run: npx playwright test ./e2e/testcases/${{ matrix.test_dir }}
         env:
           DOMAIN: '${{ vars.DOMAIN }}'
-        continue-on-error: true
 
       - uses: actions/upload-artifact@v4
-        if: steps.check-specs.outputs.has_spec_files == 'true'
+        if: always() && steps.check-specs.outputs.has_spec_files == 'true'
         with:
           name: playwright-report-${{ matrix.test_dir }}
           path: playwright-report/
