--- a/package.json
+++ b/package.json
@@ -94,6 +94,8 @@
     "dotenv": "^16.4.5",
     "envalid": "^8.0.0",
     "esbuild": "^0.18.9",
+    "graphql": "^16.3.0",
+    "graphql-tag": "^2.12.6",
     "handlebars": "^4.7.7",
     "hapi-auth-jwt2": "10.4.0",
     "hapi-pino": "^9.0.0",
