--- a/package.json
+++ b/package.json
@@ -91,12 +91,12 @@
     "@types/nodemailer": "^6.4.14",
     "app-module-path": "^2.2.0",
     "chalk": "^2.4.1",
-    "country-data": "^0.0.31",
     "cross-env": "^6.0.3",
     "csv-stringify": "^6.4.6",
     "csv2json": "^1.4.2",
     "date-fns": "^2.28.0",
     "dotenv": "^16.4.5",
+    "envalid": "^8.0.0",
     "esbuild": "^0.18.9",
     "google-libphonenumber": "^3.2.32",
     "graphql": "^16.3.0",
