--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@types/nodemailer": "^6.4.14",
     "app-module-path": "^2.2.0",
     "chalk": "^2.4.1",
+    "country-data": "^0.0.31",
     "cross-env": "^6.0.3",
     "csv-stringify": "^6.4.6",
     "csv2json": "^1.4.2",
