feat: make playwright report name more precise

--- a/.github/workflows/deploy-and-e2e.yml
+++ b/.github/workflows/deploy-and-e2e.yml
@@ -89,7 +89,7 @@ jobs:
           echo "test_matrix=$test_dirs"
 
   test:
-    needs: [deploy, discover-tests]
+    needs: [deploy, discover-tests, get-core-commit, get-country-config-commit]
     runs-on: ubuntu-22.04
     environment: ${{ github.event.inputs.environment || 'development' }}
     strategy:
@@ -138,7 +138,11 @@ jobs:
       - uses: actions/upload-artifact@v4
         if: always() && steps.check-specs.outputs.has_spec_files == 'true'
         with:
-          name: playwright-report-${{ matrix.test_dir }}
+          name: >-
+            playwright-report-
+            ${{ github.event.inputs.core-image-tag || needs.get-core-commit.outputs.latest_commit_sha }}-
+            ${{ github.event.inputs.countryconfig-image-tag || needs.get-country-config-commit.outputs.short_sha }}-
+            ${{ matrix.test_dir }}
           path: playwright-report/
           retention-days: 30
 
