--- a/infrastructure/server-setup/inventory/production.yml
+++ b/infrastructure/server-setup/inventory/production.yml
@@ -42,7 +42,7 @@ all:
 
 docker-manager-first:
   hosts:
-    farajaland-prod:
+    farajaland-prod-1:
       ansible_host: '188.245.160.165'
       data_label: data1
 
