--- a/infrastructure/monitoring/filebeat/filebeat.yml
+++ b/infrastructure/monitoring/filebeat/filebeat.yml
@@ -15,6 +15,10 @@ filebeat.inputs:
     enabled: true
     paths:
       - /var/log/opencrvs-restore.log
+  - type: log
+    enabled: true
+    paths:
+      - /var/log/opencrvs-backup.error.log
 
 # https://github.com/elastic/beats/blob/master/filebeat/filebeat.reference.yml
 
