--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "vitest": "^2.1.2"
   },
   "dependencies": {
-    "@faker-js/faker": "^6.0.0-alpha.5",
+    "@faker-js/faker": "^7.6.0",
     "@hapi/boom": "^9.1.1",
     "@hapi/h2o2": "^9.1.0",
     "@hapi/hapi": "^20.0.1",
