chore: add e2e dir in tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,12 @@
     "strictNullChecks": true,
     "types": ["jest", "fhir", "geojson"]
   },
-  "include": ["src/**/*.ts", "infrastructure/environments/**/*.ts", "typings"],
+  "include": [
+    "src/**/*.ts",
+    "infrastructure/environments/**/*.ts",
+    "typings",
+    "e2e/**/*.ts"
+  ],
   "exclude": [
     "node_modules",
     "build",
