--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@types/node": "^10.12.5",
     "@types/node-fetch": "^2.6.2",
     "@types/nodemailer": "^6.4.14",
+    "@types/uuid": "^10.0.0",
     "app-module-path": "^2.2.0",
     "chalk": "^2.4.1",
     "country-data": "^0.0.31",
