--- a/infrastructure/monitoring/elastalert/rules/log-error-alert.yaml
+++ b/infrastructure/monitoring/elastalert/rules/log-error-alert.yaml
@@ -6,7 +6,7 @@
 # & Healthcare Disclaimer located at http://opencrvs.org/license.
 #
 # Copyright (C) The OpenCRVS Authors located at https://github.com/opencrvs/opencrvs-core/blob/master/AUTHORS.
-name: 'log-alert'
+name: 'log-error-alert'
 type: 'frequency'
 index: 'kibana-alert-history-default'
 is_enabled: true
@@ -27,7 +27,7 @@ filter:
         - term:
             rule.name.keyword:
               value: 'Error while backup  '
-      minimum_should_match: 1
+
 
 alert: post2
 http_post2_url: 'http://countryconfig:3040/email'
