--- a/infrastructure/server-setup/backups.yml
+++ b/infrastructure/server-setup/backups.yml
@@ -174,3 +174,29 @@
       when: "'backups' in groups and groups['backups'] | length > 0 and ssh_test.rc != 0"
       tags:
         - backups
+
+    #if the file doesn't transfer properly we will get an error alert, since we are using /var/log/opencrvs-backup.error.log file for hold the log
+    - name: Set a cron for transfarreing the file to the backup server
+      cron:
+        user: '{{ crontab_user }}'
+        name: 'Transfer a file to {{ backup_server_remote_target_directory }}'
+        minute: '55'
+        hour: '23'
+        job: 'touch test.txt && rsync -a --prgress ./test.txt {{ backup_server_user }}@{{ destination_server }}:{{ backup_server_remote_target_directory }}/ 2>> /var/log/opencrvs-backup.error.log'
+        state: present
+
+- hosts: backups
+  become: yes 
+  tasks:
+    - name: 'Set a cron to delete the test file'
+      cron: 
+        user: '{{ crontab_user }}'
+        name: 'Delete the test file from {{ backup_server_remote_target_directory }}'
+        minute: '58'
+        hour: '23'
+         job: |
+           if [ -f {{ backup_server_remote_target_directory }}/test.txt ]; then
+             rm -f {{ backup_server_remote_target_directory }}/test.txt
+           fi
+        state: present
+  
