--- a/infrastructure/server-setup/backups.yml
+++ b/infrastructure/server-setup/backups.yml
@@ -174,3 +174,19 @@
       when: "'backups' in groups and groups['backups'] | length > 0 and ssh_test.rc != 0"
       tags:
         - backups
+
+    - name: Create a temporary file for test connection
+      ansible.builtin.file:
+        path: /tmp/test_connection.txt
+        state: touch
+        owner: '{{ crontab_user }}'
+      tags: 
+        - backups
+      
+    - name: Copy the test connection file to the backup server
+      shell: rsync -avz -e "ssh -o StrictHostKeyChecking=no" /tmp/test_connection.txt {{ backup_server_user }}@{{ destination_server }}:{{ backup_server_remote_target_directory }}/test_connection.txt
+      remote_user: '{{ crontab_user }}'
+      when: "'backups' in groups and groups['backups'] | length > 0"
+      tags:
+        - backups
+      
