--- a/infrastructure/server-setup/backups.yml
+++ b/infrastructure/server-setup/backups.yml
@@ -127,7 +127,7 @@
       
     - name: Create a file in backup directory to test connection
       ansible.builtin.file:
-        path: '{{ backup_server_remote_target_directory }}/test_connection.txt'
+        path: '{{ backup_server_remote_target_directory }}/downloaded_from_backup.txt'
         state: touch
         owner: '{{ backup_server_user }}'
       tags:
@@ -188,13 +188,14 @@
         path: /tmp/test_connection.txt
         state: touch
         owner: '{{ crontab_user }}'
+      when: "'backups' in groups and groups['backups'] | length > 0 and enable_backups"
       tags: 
         - backups
       
     - name: Copy the test connection file to the backup server
       shell: rsync -avz -e "ssh -o StrictHostKeyChecking=no" /tmp/test_connection.txt {{ backup_server_user }}@{{ destination_server }}:{{ backup_server_remote_target_directory }}/test_connection.txt
       remote_user: '{{ crontab_user }}'
-      when: "'backups' in groups and groups['backups'] | length > 0"
+      when: "'backups' in groups and groups['backups'] | length > 0 and enable_backups"
       tags:
         - backups
     
