--- a/infrastructure/server-setup/tasks/data-partition.yml
+++ b/infrastructure/server-setup/tasks/data-partition.yml
@@ -107,14 +107,11 @@
     path: /data/backups/metabase
   register: metabase_data_backup
 
-- name: 'Create metabase backup directory'
+- name: 'Delete metabase backup directory if exists'
   file:
     path: /data/backups/metabase
-    state: directory
-    group: 1000
-    owner: 1000
-    mode: ugo+rwx
-  when: not metabase_data_backup.stat.exists
+    state: absent
+  when: metabase_data_backup.stat.exists
 
 - name: Check influxdb data directory
   stat:
