add UUID as explicit dependency for Farajaland as E2Es are using it

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "e2e:generate-types": "graphql-codegen --config e2e/codegen.yml && yarn prettier --write e2e/gateway.ts",
     "precommit": "lint-staged",
     "test": "vitest 'src/**/*.test.ts' --passWithNoTests",
-    "test:compilation": "tsc --noEmit --resolveJsonModule",
+    "test:compilation": "tsc --noEmit",
     "lint": "eslint -c .eslintrc.js",
     "start": "cross-env NODE_ENV=development NODE_OPTIONS=--dns-result-order=ipv4first nodemon --exec ts-node -r tsconfig-paths/register src/index.ts",
     "start:prod": "ts-node --transpile-only -r tsconfig-paths/register src/index.ts",
@@ -92,6 +92,7 @@
     "@types/node": "^18.19.1",
     "@types/node-fetch": "^2.6.2",
     "@types/nodemailer": "^6.4.14",
+    "uuid": "^10.0.0",
     "@types/uuid": "^10.0.0",
     "app-module-path": "^2.2.0",
     "chalk": "^2.4.1",
