--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -27,10 +27,10 @@ jobs:
       - name: List Test Directories
         id: list-tests
         run: |
-          test_dirs=$(find ./e2e/testcases -mindepth 1 -maxdepth 1 -type d -exec basename {} \; | jq -R -s -c 'split("\n")[:-1]')
-          echo "Test directories: $test_dirs"
-          echo "test_matrix=$test_dirs" >> $GITHUB_OUTPUT
-          echo "test_matrix=$test_dirs"
+          tests_suites=$(find e2e/testcases -type f -name "*.spec.ts" | jq -R -s -c 'split("\n")[:-1]')
+          echo "Test suites: $tests_suites"
+          echo "test_matrix=$tests_suites" >> $GITHUB_OUTPUT
+          echo "test_matrix=$tests_suites"
 
       - name: Cache Node.js dependencies
         uses: actions/cache@v4
@@ -59,15 +59,6 @@ jobs:
         with:
           node-version: 18
 
-      - name: Check for Spec Files
-        id: check-specs
-        run: |
-          if ls ./e2e/testcases/${{ matrix.test_dir }}/*.spec.ts > /dev/null 2>&1; then
-            echo "has_spec_files=true" >> $GITHUB_OUTPUT
-          else
-            echo "has_spec_files=false" >> $GITHUB_OUTPUT
-          fi
-
       - name: Cache Node.js dependencies
         uses: actions/cache@v4
         with:
@@ -88,7 +79,7 @@ jobs:
 
       - name: Run Playwright Tests
         if: steps.check-specs.outputs.has_spec_files == 'true'
-        run: npx playwright test ./e2e/testcases/${{ matrix.test_dir }}
+        run: npx playwright test ./${{ matrix.test_dir }}
         env:
           DOMAIN: '${{ vars.DOMAIN }}'
         continue-on-error: true
