--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -81,13 +81,13 @@ jobs:
           DOMAIN: '${{ vars.DOMAIN }}'
         continue-on-error: true
 
-      - name: Take basename from test_file
-        id: basename
-        run: echo "basename=$(basename ${{ matrix.test_file }})" >> $GITHUB_OUTPUT
+      - name: Form the artifact name from test_file
+        id: artifact
+        run: echo "artifact=$(dirname ${{ matrix.test_file }})_$(basename ${{ matrix.test_file }})" >> $GITHUB_OUTPUT
 
       - uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: playwright-report-${{github.event.inputs.core-image-tag || needs.get-core-commit.outputs.latest_commit_sha}}-${{github.event.inputs.countryconfig-image-tag || needs.get-country-config-commit.outputs.short_sha}}-${{ steps.basename.outputs.basename }}
+          name: playwright-report-${{github.event.inputs.core-image-tag || needs.get-core-commit.outputs.latest_commit_sha}}-${{github.event.inputs.countryconfig-image-tag || needs.get-country-config-commit.outputs.short_sha}}-${{ steps.artifact.outputs.artifact }}
           path: playwright-report/
           retention-days: 30
