--- a/.github/workflows/seed-data.yml
+++ b/.github/workflows/seed-data.yml
@@ -28,39 +28,12 @@ jobs:
   seed-data:
     environment: ${{ inputs.environment }}
     runs-on: ubuntu-24.04
+    container: 
+      image: ghcr.io/opencrvs/ocrvs-data-seeder:${{ inputs.core-image-tag }}
     outputs:
       outcome: ${{ steps.seed.outcome }}
     timeout-minutes: 60
     steps:
-      - name: Clone core
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          repository: 'opencrvs/opencrvs-core'
-
-      - name: Set CORE_VERSION from inputs
-        if: ${{ github.event.inputs.core-image-tag }}
-        run: git checkout ${{ github.event.inputs.core-image-tag }}
-
-      - name: Use Node.js from .nvmrc
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: .nvmrc
-
-      - name: Install dependencies
-        run: yarn install
-
-      - name: Seed data on given environment
-        uses: nick-fields/retry@v3
-        id: seed
-        with:
-          timeout_minutes: 10
-          max_attempts: 5
-          command: |
-            yarn seed:prod
-        env:
-          ACTIVATE_USERS: ${{ vars.ACTIVATE_USERS }}
-          GATEWAY_HOST: ${{ vars.GATEWAY_HOST }}
-          AUTH_HOST: ${{ vars.AUTH_HOST }}
-          COUNTRY_CONFIG_HOST: ${{ vars.COUNTRY_CONFIG_HOST }}
-          SUPER_USER_PASSWORD: ${{ secrets.SUPER_USER_PASSWORD }}
+      - name: Print the present directory
+        run: pwd
+     
