--- a/.github/workflows/trigger-e2e-environment.yml
+++ b/.github/workflows/trigger-e2e-environment.yml
@@ -30,6 +30,8 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Get PR Information (when manually triggered)
+        env:
+          GH_TOKEN: ${{ github.token }}
         if: ${{ github.event_name == 'workflow_dispatch' }}
         run: |
           PR_NUMBER=${{ github.event.inputs.pr_number }}
