--- a/infrastructure/server-setup/inventory/production.yml
+++ b/infrastructure/server-setup/inventory/production.yml
@@ -15,6 +15,7 @@ all:
     # Enable backups
     enable_backups: true
     backup_server_remote_target_directory: /home/backup/backups
+    single_node: false
     # external_backup_server_ssh_port: Defined in --extra-vars by the provisioning pipeline
     # external_backup_server_ip: Defined in --extra-vars by the provisioning pipeline
     users:
