--- a/infrastructure/server-setup/inventory/staging.yml
+++ b/infrastructure/server-setup/inventory/staging.yml
@@ -18,6 +18,7 @@ all:
     backup_server_remote_target_directory: /home/backup/staging-backups
     backup_server_remote_source_directory: /home/backup/backups
     periodic_restore_from_backup: true
+    single_node: true
     # external_backup_server_ssh_port: Defined in --extra-vars by the provisioning pipeline
     # external_backup_server_ip: Defined in --extra-vars by the provisioning pipeline
     users:
