--- a/infrastructure/server-setup/swarm.yml
+++ b/infrastructure/server-setup/swarm.yml
@@ -44,7 +44,7 @@
     - name: Fail if the node is already part of a swarm
       fail:
         msg: "You are trying to attach a worker to a Swarm that is already part of another Swarm. Please make the node leave the current Swarm first, then run the playbook again."
-      when: "worker_swarm_status.stdout.find('active') != -1"
+      when: "worker_swarm_status.stdout == 'active'"
 
     - name: 'Join as a worker'
       shell: "docker swarm join --token {{ hostvars[manager_hostname]['worker_token']['stdout'] }} {{ hostvars[manager_hostname]['ansible_default_ipv4']['address'] }}:2377"
